# story-flow

./: .env.example  .gitignore  LICENSE  README.md  activate_env.sh  cleanup.sh  main.py  pyproject.toml  pytest.ini  setup.sh
.cursor/rules/: python-uv.mdc  python.mdc
data/input/: api_kling_i2v.json  character_mapping.json.template  input.docx  input.md.template
data/output/audio/: .gitkeep
data/output/images/: .gitkeep
data/output/processed/: txt.xlsx
data/output/videos/: .gitkeep
data/temp/: .gitkeep
docs/: CHANGELOG.md  README.md  README_CN.md  api-reference.md  development-guide.md  environment-setup.md  liblib_ai_complete_guide.md  liblib_api_reference.md  moviepy_warnings_fix.md  project-history.md  user-guide.md  用户操作教程.md  配置参数修复报告.md  项目重构完成报告.md
scripts/: auto_pipeline.py  cleanup.py  setup_env.py  test_llm.py
src/: comfyui_client.py  config.py  liblib_standalone.py  llm_client.py  semantic_analyzer.py  story_generator.py  viral_video_generator.py
src/managers/: __init__.py  image_manager.py
src/models/: __init__.py  image_models.py
src/pipeline/: image_generator.py  image_service_manager.py  image_service_selector.py  image_to_video.py  liblib_generator.py  liblib_service.py  text_analyzer.py  text_splitter.py  validate_chapters.py  video_composer.py  video_music_composer.py  voice_synthesizer.py
src/services/: __init__.py
src/services/image/: __init__.py  base.py  factory.py  liblib_service.py  stable_diffusion_service.py
src/utils/: file_manager.py  text_optimizer.py
tests/: README.md  __init__.py  conftest.py  test_f1_generation.py  test_liblib_service.py  test_optimizations.py
tests/examples/: f1_example.py  liblib_batch_example.py  test_batch_concurrent.py  test_f1_complete_params.py  test_liblib_batch.py  test_liblib_config.py  test_liblib_integration.py  test_liblib_sequential.py  test_txt_json.py
tests/fixtures/: __init__.py
tests/fixtures/data/: sample_chapters.csv  sample_input.md
tests/integration/: __init__.py  test_external_services.py  test_pipeline_integration.py
tests/unit/: __init__.py  test_config.py  test_image_generator.py  test_llm_client.py  test_text_analyzer.py  test_video_composer.py  test_voice_synthesizer.py
